--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "countdown": "^2.6.0",
+    "moment": "^2.23.0",
+    "moment-countdown": "0.0.3",
     "react": "^16.7.0",
+    "react-countdown-moment": "0.0.4",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
