--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "frontendwedding",
   "version": "0.1.0",
+  "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "fkill-cli": "^5.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
